Bug 592802 - Send change event when <input type='file'> is changed even with display:none. r=sicking a2.0=blocking